Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84269

StackView doesn't work with required properties

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.15
    • Quick: Controls 2
    • None
    • d229f45a3a8c53e2783543474b50f32ff60f5ce8 (qt/tqtc-qtdeclarative/6.2.2)

    Description

      With the attached example, the text isn't rendered if the property is required; commenting out the required keyword makes it work.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            mitch_curtis Mitch Curtis
            Votes:
            3 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes