StackView: support required properties

Warn if they are not set, and remove the delegate in that case.

Fixes: QTBUG-84269
Pick-to: 6.2
Change-Id: I07cfdff02ed2278f9cba5131dcfc3416730c6028
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>